feat: Create an echoing client-server system with frontend

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,17 +5,15 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Automated Essay Evaluation with AI</title>
-	<link rel="stylesheet" href="index.css">
+	<link rel="stylesheet" href="../css/index.css">
 </head>
-<title>
-	LLM essay evaluation
-</title>
+<title>LLM essay evaluation</title>
 
 <body>
 	<h1>Welcome to Automated Essay Evaluation Service!</h1>
-	<h3>The essay would be grade from 1 to 6. Please fill the following form:</h3>
+	<h3>The essay would be graded from 1 to 6. Please fill the following form:</h3>
 	<div>
-		<form action="" method="post">
+		<form id="evaluationForm">
 			<div>
 				<div>
 					<label for="essay">Essay content:</label>
@@ -23,7 +21,7 @@
 				</div>
 				<div>
 					<label for="model_id">Select the model for evaluation:</label>
-					<select  name="model_id" id="model_id">
+					<select name="model_id" id="model_id">
 						<option value="GPT-2">GPT-2</option>
 						<option value="DeBERTa-v3">DeBERTa-v3</option>
 						<option value="DistilBERT">DistilBERT</option>
@@ -31,10 +29,12 @@
 					</select>
 				</div>
 				<br />
-				<input type="submit" value="Evaluate">
+				<button type="button" id="evaluateButton">Evaluate</button>
 			</div>
 		</form>
 	</div>
+	<div id="result"></div>
+	<script src="../scripts/index.js" async></script>
 </body>
 
 </html>
