--- a/templates/index.html
+++ b/templates/index.html
@@ -5,23 +5,25 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Automated Essay Evaluation with AI</title>
-	<link rel="stylesheet" href="../css/index.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<!-- <link rel="stylesheet" href="../css/index.css"> -->
 </head>
 <title>LLM essay evaluation</title>
 
 <body>
 	<h1>Welcome to Automated Essay Evaluation Service!</h1>
 	<h3>The essay would be graded from 0 to 5. Please fill the following form:</h3>
-	<div>
+	
 		<form id="evaluationForm">
+			  <legend>Enter details</legend>
 			<div>
-				<div>
-					<label for="essay">Essay content:</label>
-					<input type="text" name="essay" id="essay">
+				<div class="mb-3">
+					<label for="essay" class="form-label">Essay content:</label>
+					<textarea class="form-control" placeholder="Provide your essay" name="essay" id="essay" rows=5></textarea>
 				</div>
-				<div>
-					<label for="model_id">Select the model for evaluation:</label>
-					<select name="model_id" id="model_id">
+				<div class="mb-3">
+					<label for="model_id" class="form-label">Select the model for evaluation:</label>
+					<select name="model_id" id="model_id"  class="form-select">
 						<option value="GPT-2">GPT-2</option>
 						<option value="DeBERTa-v3">DeBERTa-v3</option>
 						<option value="DistilBERT">DistilBERT</option>
@@ -29,11 +31,12 @@
 					</select>
 				</div>
 				<br />
-				<button type="button" id="evaluateButton">Evaluate</button>
+				<button type="button" id="evaluateButton" class="btn btn-primary">Evaluate</button>
 			</div>
 		</form>
-	</div>
+
 	<div id="result"></div>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 	<script src="../scripts/index.js" async></script>
 </body>
 
