--- a/css/index.css
+++ b/css/index.css
@@ -1,18 +1,13 @@
-form.form-example {
-	display: table;
-  }
-  
-  div.form-example {
-	display: table-row;
-  }
-  
-  label,
-  input {
-	display: table-cell;
-	margin-bottom: 10px;
-  }
-  
-  label {
-	padding-right: 10px;
-  }
-  
+#content-wrapper{
+  margin-left: 35px;
+  margin-top: 20px;
+}
+
+#essay{
+  width: 500px;
+  height: 150px;
+}
+
+#model_id{
+  width: 150px;
+}
